--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "project-statistics-exporter",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "main": "lib/app.js",
   "license": "MIT",
   "dependencies": {
     "octokit": "^1.7.1",
-    "prom-client": "^14.0.1",
+    "prom-client": "^14.0.1"
+  },
+  "devDependencies": {
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   },
